--- a/simple/index.html
+++ b/simple/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/simple.css">
     <title>HTML Guide</title>
 </head>
-
 <body>
     <header>
         <h1>HTML Basics: A Beginners Guide</h1>
@@ -35,27 +34,29 @@
 &lt;/html&gt;
         </code>
     </pre>
-
     <p>The HTML page is made of <code>&lt;tags&gt;</code>, in this document there are such tags as:</p>
     <ul>
         <li>DOCTYPE</li>
         <li>html</li>
         <li>head</li>
         <li>meta</li>
-        <li>title</li>
         <li>body</li>
-        <li>h1</li>
-        <li>p</li>
     </ul>
-    
-    <p>The document starts with <code>&lt;!DOCTYPE html&gt;</code> part. This declaration tells the browser is HTML5 (html became popular when HTML5 came, in 2014. Now since browsers became smarter it doesn't make anything functional.</p>
 
-    <blockquote>
-        ""Good design is a little design as possible""
+    <p>You can even insert images in html like this using the <code>&lt;img&gt;</code> tag</p>
+    <!-- i could just paste the URL but it was too long (151 characters) -->
+    <img src="images/pug.jpg" alt="a pug being teased by a biscuit">
+
+    <h2>That's not all  </h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam earum facilis neque saepe. Quam quas ad possimus
+        eveniet eligendi nostrum ducimus consectetur odio et iusto deleniti, nam laboriosam architecto eaque!</p>
+
+    <blockquote cite="https://www.youtube.com/channel/UCSV53xo8GowdEMqVBJL_lfg">
+        "Good design is a little design as possible"
         <br>
-        " - some german man"
+        - some german man
     </blockquote>
 
 </body>
 
-</html>
+</html> 
